# Universal_bot

./: .env.example  .gitignore  README.md  bot.py  money.py  pyproject.toml
src/: config.py
src/handlers/: currency.py  koteo.py  polls.py  start.py  weather.py
